fix article size with media. fix gap.

--- a/src/components/UsefulArticlesBlock/UsefulArticlesBlock.module.scss
+++ b/src/components/UsefulArticlesBlock/UsefulArticlesBlock.module.scss
@@ -14,31 +14,19 @@
     & .allArticlesItemsContainer {
       @include flex(row, space-between, stretch);
       width: 100%;
-      gap: 1.4%;
-      margin: 0 0.75%;
+      gap: 2%;
+      margin: 0 1%;
       transition: translate;
       transition-property: transform;
       transition-duration: 500ms;
       transition-timing-function: ease-in-out;
       @media (max-width: 1199px) {
-          gap: 9.8%;
-        margin: 0 4.9%;
-      }
-      @media (max-width: 992px) {
-          gap: 58.8%;
-        margin: 0 29.4%;
+        gap: 10%;
+        margin: 0 5%
       }
       @media (max-width: 768px) {
-        gap: 44%;
-        margin: 0 22%;
-      }
-      @media (max-width: 532px) {
-        gap: 43.1%;
-        margin: 0 21.5%;
-      }
-      @media (max-width: 412px) {
-        gap: 17.2%;
-        margin: 0 8.6%;
+        gap: 3%;
+        margin: 0 0;
       }
     }
   }
